# dtcc-mesher

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  THIRD_PARTY.md  dtcc-mesher-audit-summary.md  pyproject.toml
cli/: main.c
cmake/: dtcc_mesher.pc.in  dtcc_mesherConfig.cmake.in
demos/c/: basic_generate.c  quality_report.c
demos/cli/: README.md
demos/python/: basic_generate.py  plot_mesh.py
include/dtcc_mesher/: dtcc_mesher.h  dtcc_mesher_io.h  dtcc_mesher_version.h
python/: bindings.cpp
python/dtcc_mesher/: __init__.py  __main__.py  _coverage.py  _io.py  _plot.py
src/api/: dtcc_mesher.c  dtcc_mesher_api_internal.h  dtcc_mesher_io.c
src/core/: cdt.c  cdt.h  io_pslg.c  io_pslg.h  mesh.c  mesh.h  report.c  report.h  validate.c  validate.h
tests/: test_mesh.c
tests/c/: api_dump.c  test_api.c
tests/cases/: acute_wedge_5deg.pslg  city_downtown_domain.pslg  city_footprints_domain.pslg  city_tight_downtown_domain.pslg  collinear4.pts  double_notch_domain.pslg  duplicate5.pts  intersecting_segments.pslg  l_shape_domain.pslg  long_channel_domain.pslg  multi_hole_domain.pslg  narrow_notch_domain.pslg  square4.pts  square_center5.pts  square_domain.pslg  square_hole_domain.pslg  stockholm_case15_graph_maxh10.npz  stockholm_case1_graph_unrestricted.npz  stockholm_case34_graph_unrestricted.npz  stockholm_case55_graph_unrestricted.npz  thin_rect4.pts  tiny_slit_domain.pslg  top_cluster_domain.pslg  triangle3.pts  warped_disc64.pts  warped_disc64_domain.pslg
tests/cases/stockholm_case55_clean/: README.md  building00_domain.pslg  building01_domain.pslg  building02_domain.pslg  building03_domain.pslg  building04_domain.pslg  building05_domain.pslg  building06_domain.pslg  building07_domain.pslg  building08_domain.pslg  building09_domain.pslg  building10_domain.pslg  building11_domain.pslg  building12_domain.pslg  building13_domain.pslg  building14_domain.pslg  building15_domain.pslg  building16_domain.pslg  building17_domain.pslg  building18_domain.pslg  building19_domain.pslg  building20_domain.pslg  building21_domain.pslg  building22_domain.pslg  building23_domain.pslg  building24_domain.pslg  building25_domain.pslg  building26_domain.pslg  building27_domain.pslg  building28_domain.pslg  building29_domain.pslg  building30_domain.pslg  building31_domain.pslg  building32_domain.pslg  building33_domain.pslg  ground00_domain.pslg  ground01_domain.pslg  ground02_domain.pslg  ground03_domain.pslg  ground04_domain.pslg  (+51 more)
tests/cmake/: run_cli_test.cmake
tests/python/: test_cli.py  test_python_api.py  test_stockholm_case55_clean_corpus.py  test_stockholm_case55_regressions.py
